src/containers/DetailedRestaurant/style.scss
.restaurant-heading {
  text-align: center;
  background-size: cover;
  background-position: center center;

  display: flex;
  flex-direction: column;
  justify-content: center;
  position: relative;

  height: 500px;

  margin-bottom: 2rem;

  &:after {
    content: '';
    background-color: rgba(black, 0.76);

    position: absolute;

    width: 100%;
    height: 100%;

    top: 0;
    left: 0;
    z-index: 0;
  }

  &__title {
    color: $gray-light;
    font-size: 4rem;

    position: relative;

    z-index: 1;

    margin-top: 0;
  }

  &__info {
    color: $gray-light;
    font-size: 2rem;

    position: relative;

    z-index: 1;

    a {
      color: $gray-light;
    }
  }

  &__rating {
    font-size: 3rem;

    position: relative;

    z-index: 1;
  }
}

@media (min-width: $screen-md) {
  .restaurant-heading {
    &__title {
      font-size: 6rem;
    }
  }
}

